--- a/001-First-Steps/First Steps - Chap 01 - Demo.ipynb
+++ b/001-First-Steps/First Steps - Chap 01 - Demo.ipynb
@@ -3,10 +3,15 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled1.ipynb",
+      "name": "First Steps - Chap 01 - Demo",
       "provenance": [],
       "private_outputs": true,
-      "authorship_tag": "ABX9TyPbIzQcLLHjMZ8KKBYtflyj",
+      "collapsed_sections": [
+        "8PorNC9DpNmC",
+        "k8TX3jKjpe2b",
+        "cjerTn0RqmSj"
+      ],
+      "authorship_tag": "ABX9TyMJhibi9dEWw7Bt9I6ORzw2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,16 +28,6 @@
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/cstar-industries/python-3-beginner/blob/master/001-First-Steps/First%20Steps%20-%20Chap%2001%20-%20Demo.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Zxrw9hRXo80E",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Session 1"
       ]
     },
     {
@@ -155,6 +150,108 @@
       },
       "source": [
         "2 ** 1000"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cjerTn0RqmSj",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Variables"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HsonC2sTqq4b",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = 1138\n",
+        "print(a)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B2Zi7Qrrq8ul",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(a - 138)\n",
+        "print(a)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VM3DHkturEpS",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "type(a)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vHE598KbrGaj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "del a\n",
+        "print(a)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3fk0EeV5re3u",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Capture keyboard input"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L1CeyNlbrlQ0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "input()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hXvG7rLKrtxn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "name = input(\"What's your name? \")\n",
+        "print(\"Your name is\", name)"
       ],
       "execution_count": 0,
       "outputs": []
