--- a/001-First-Steps/First Steps - Chap 01 - Demo.ipynb
+++ b/001-First-Steps/First Steps - Chap 01 - Demo.ipynb
@@ -11,7 +11,7 @@
         "k8TX3jKjpe2b",
         "cjerTn0RqmSj"
       ],
-      "authorship_tag": "ABX9TyMJhibi9dEWw7Bt9I6ORzw2",
+      "authorship_tag": "ABX9TyOFFi9kwzfW5wTZ/FXBDd4t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -252,6 +252,34 @@
       "source": [
         "name = input(\"What's your name? \")\n",
         "print(\"Your name is\", name)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ou4Z_TL1szv5",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Multiple statements in a block"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YEasqe49s3ds",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "one = 1\n",
+        "two = 2\n",
+        "three = \"three\"\n",
+        "\n",
+        "print(one, two)\n",
+        "print(three, \"3\")"
       ],
       "execution_count": 0,
       "outputs": []
