--- a/001-First-Steps/First Steps - Chap 01 - Demo.ipynb
+++ b/001-First-Steps/First Steps - Chap 01 - Demo.ipynb
@@ -3,15 +3,13 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "First Steps - Chap 01 - Demo",
+      "name": "First Steps - Chap 02 - Demo",
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [
-        "8PorNC9DpNmC",
-        "k8TX3jKjpe2b",
-        "cjerTn0RqmSj"
+        "AYX0yhyeDMZi"
       ],
-      "authorship_tag": "ABX9TyOFFi9kwzfW5wTZ/FXBDd4t",
+      "authorship_tag": "ABX9TyMicNs270/IVMPqUu2UBPcY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,22 +31,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8PorNC9DpNmC",
+        "id": "AYX0yhyeDMZi",
         "colab_type": "text"
       },
       "source": [
-        "## Print some text"
+        "## Meet the numbers"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "f_ZaZKfko6n-",
+        "id": "l1WEGaS8o0Sd",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "print(\"Hello World\")"
+        "42"
       ],
       "execution_count": 0,
       "outputs": []
@@ -56,12 +54,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jmquDVbvpTx4",
+        "id": "-PEao02iDT_Y",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "print(3)"
+        "0.5"
       ],
       "execution_count": 0,
       "outputs": []
@@ -69,12 +67,57 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DNaodKCmpVzE",
+        "id": "kxsjLbGkDVm6",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "print(a)"
+        "print(5.43e9)\n",
+        "print(1e-3)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j8iav9cADqk0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(1/2)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "g-Cu-jpTDsz8",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = 3\n",
+        "b = 4\n",
+        "\n",
+        "print(a / b)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "frwasojFD04Q",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(type(a))\n",
+        "print(type(b))\n",
+        "print(type(a / b))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -82,22 +125,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "k8TX3jKjpe2b",
+        "id": "AoRttUxyEvtm",
         "colab_type": "text"
       },
       "source": [
-        "## Do some math"
+        "## Meet the operators"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lvm2aOSqpgvO",
+        "id": "7gZbXZCAEyfu",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "3 + 2"
+        "1 + 1"
       ],
       "execution_count": 0,
       "outputs": []
@@ -105,7 +148,20 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "acxnUv3Cpidu",
+        "id": "I5WZaMgKE08T",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "1 + 1 + 1"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NrkKxmp9FLE6",
         "colab_type": "code",
         "colab": {}
       },
@@ -118,12 +174,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oVVsfv0jptfN",
+        "id": "vSSdf1-OFOZb",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "1e6"
+        "9 / 3"
       ],
       "execution_count": 0,
       "outputs": []
@@ -131,7 +187,33 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "W7zMoKtHpnla",
+        "id": "riLg_Uk6E2rZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "1 + 2 + 3 * 3"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6fQ6YwStFEtI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "(1 + 2 + 3) * 3"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RkMauQETGA7t",
         "colab_type": "code",
         "colab": {}
       },
@@ -144,12 +226,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lVLWyU1cpzqy",
+        "id": "Cxtl8Sw5KrWu",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "2 ** 1000"
+        "10 // 3"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9b1twm5aKthx",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "10 % 3"
       ],
       "execution_count": 0,
       "outputs": []
@@ -157,23 +252,22 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "cjerTn0RqmSj",
+        "id": "FLFY1CygK6ey",
         "colab_type": "text"
       },
       "source": [
-        "## Variables"
+        "## Deeper math"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HsonC2sTqq4b",
+        "id": "VZiF-tZ6K-06",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "a = 1138\n",
-        "print(a)"
+        "3+2j"
       ],
       "execution_count": 0,
       "outputs": []
@@ -181,13 +275,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B2Zi7Qrrq8ul",
+        "id": "NFDVgUxkLDgC",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "print(a - 138)\n",
-        "print(a)"
+        "3+2j + 3-2j"
       ],
       "execution_count": 0,
       "outputs": []
@@ -195,12 +288,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VM3DHkturEpS",
+        "id": "qTEtxZYALKFM",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "type(a)"
+        "type(3+2j)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -208,36 +301,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vHE598KbrGaj",
+        "id": "qYgc3DhNLMZ0",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "del a\n",
-        "print(a)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "3fk0EeV5re3u",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Capture keyboard input"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "L1CeyNlbrlQ0",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "input()"
+        "print(abs(128.3))\n",
+        "print(abs(-4))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -245,41 +315,99 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hXvG7rLKrtxn",
+        "id": "ETIFgbfhMHD1",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "name = input(\"What's your name? \")\n",
-        "print(\"Your name is\", name)"
+        "print(abs(3+4j))"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "Ou4Z_TL1szv5",
-        "colab_type": "text"
-      },
-      "source": [
-        "## Multiple statements in a block"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
-        "id": "YEasqe49s3ds",
+        "id": "Rmt23XXBMjT-",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "one = 1\n",
-        "two = 2\n",
-        "three = \"three\"\n",
+        "import math\n",
         "\n",
-        "print(one, two)\n",
-        "print(three, \"3\")"
+        "print(math.sqrt(2) / 2)\n",
+        "print(math.cos(math.pi / 4))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WxNNN0yeM5lb",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "print(math.floor(1.2))\n",
+        "print(math.ceil(1.2))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YQMEhbFwNOHa",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Assignment operators"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "y0n-j29xNQLJ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a = 1\n",
+        "a += 2\n",
+        "\n",
+        "print(a)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LzbCwPG6NUJ0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a *= 3\n",
+        "\n",
+        "print(a)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QP_JhCxpNWv1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "a /= 9\n",
+        "a += (4 + 1)\n",
+        "\n",
+        "print(a)"
       ],
       "execution_count": 0,
       "outputs": []
