--- a/001-First-Steps/First Steps - Chap 03 - Demo.ipynb
+++ b/001-First-Steps/First Steps - Chap 03 - Demo.ipynb
@@ -10,7 +10,7 @@
         "n2Y1tAFyVuq8",
         "NuIaiuaQ9CRr"
       ],
-      "authorship_tag": "ABX9TyOF93VshEmal2WSdWI32UPp",
+      "authorship_tag": "ABX9TyOaNNSXxncJxLm0OfIr+RUd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -659,6 +659,23 @@
         "import math\n",
         "\n",
         "print(f'The square root of {a} is approximately {math.sqrt(a):.2f}')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L_nZ6HSwI3Rl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "word = 'Hello'\n",
+        "\n",
+        "print(f'{word:_<15}')\n",
+        "print(f'{word:*^15}')\n",
+        "print(f'{word:_>15}')"
       ],
       "execution_count": 0,
       "outputs": []
