--- a/001-First-Steps/First Steps - Chap 02 - Exercises.ipynb
+++ b/001-First-Steps/First Steps - Chap 02 - Exercises.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Copy of First Steps - Chap 02 - Exercises",
+      "name": "First Steps - Chap 02 - Exercises",
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
@@ -32,9 +32,22 @@
         "colab_type": "text"
       },
       "source": [
-        "## 1. Execute a line of code\n",
+        "## 1. Use different numeric data types and mix them together\n",
         "\n",
-        "Execute the following one-line code block by clicking the \"play\" icon to the left, or by selecting the block and typing Ctrl+Enter on your keyboard (cmd+Enter on a Mac)."
+        "Create 3 variables containing 3 different numeric types:\n",
+        "\n",
+        "* `i`: an `int`\n",
+        "* `f`: a `float`\n",
+        "* `c`: a `complex`\n",
+        "\n",
+        "Then create the following, using the previously declared variables, and the Python math operators:\n",
+        "\n",
+        "* `i2`: `i` squared\n",
+        "* `i_f`: the sum of `i` and `f`\n",
+        "* `i_c`: the product of `i` and `c`\n",
+        "* `i_f_c`: `i` plus `f` minus `c`\n",
+        "\n",
+        "Use the `type` function see what the type of the derived variables are."
       ]
     },
     {
@@ -45,7 +58,16 @@
         "colab": {}
       },
       "source": [
-        "print(\"Hello World!\")"
+        "i =\n",
+        "f =\n",
+        "c =\n",
+        "\n",
+        "i2 =\n",
+        "i_f =\n",
+        "i_c = \n",
+        "i_f_c =\n",
+        "\n",
+        "print(\"i_f equals \", i_f, \" and is of type \", type(i_f))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -57,12 +79,15 @@
         "colab_type": "text"
       },
       "source": [
-        "## 2. Print your name out\n",
+        "## 2. Add two integers from user input\n",
         "\n",
-        "Complete the following code block so that when executed, it outputs your name. E.g.\n",
+        "Ask the user to enter 2 integers and add them together, then print the result.\n",
         "\n",
         "```\n",
-        "Charles\n",
+        "Enter an integer number: 3\n",
+        "Enter another integer number: 14\n",
+        "\n",
+        "3 + 14 = 17\n",
         "```"
       ]
     },
@@ -74,7 +99,10 @@
         "colab": {}
       },
       "source": [
-        "print()"
+        "# Don't be worried about this `int(input())` thing, we'll explain it later. For\n",
+        "# now just consider it a magic trick to get in `int` into `a`.\n",
+        "a = int(input('Enter an integer number: '))\n",
+        "b = # Your code starts here..."
       ],
       "execution_count": 0,
       "outputs": []
@@ -82,42 +110,35 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "FszhZJBstr8V",
+        "id": "_KV3QTtzhoTB",
         "colab_type": "text"
       },
       "source": [
-        "## 3. Powers of 2\n",
+        "## 3. Cross-multiplication\n",
         "\n",
-        "Complete the following code block so that it outputs the list of powers of 2, from 1 to 1024. The values should be computed byt he Python interpreter, not written out manually.\n",
+        "A simple exercise from primary school, done with Python.\n",
         "\n",
-        "Expected output:\n",
+        "Given a speed $S$ in kilometers per hour, and a distance $D$ find out how long\n",
+        "it will take to cross this distance at the given speed.\n",
         "\n",
+        "Your program should output something like this\n",
         "```\n",
-        "1\n",
-        "2\n",
-        "4\n",
-        "8\n",
-        "16\n",
-        "32\n",
-        "64\n",
-        "218\n",
-        "256\n",
-        "512\n",
-        "1024\n",
+        "At a speed of 100 km/h, it will take 4.5 hours to cross 450 km.\n",
         "```\n",
         "\n",
-        "> **Hint:** Remember you can write more than one line in a code block."
+        "> **BONUS:** Try to write the time in integer hours and minutes!"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LjDreBVCuXVW",
+        "id": "iK9W_VOpjU1U",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "print(2**0)"
+        "S = 100\n",
+        "D = 450"
       ],
       "execution_count": 0,
       "outputs": []
@@ -125,36 +146,27 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_7ffaPZPuyyF",
+        "id": "0GxJYHSgjlax",
         "colab_type": "text"
       },
       "source": [
-        "## 4. Echo\n",
+        "## 4. Square root\n",
         "\n",
-        "Write an \"Echo\" program that asks (politely) for an input, and always repeats what has been said, followed by three dots: `...`\n",
-        "\n",
-        "Example:\n",
-        "\n",
-        "```\n",
-        "<Output> \n",
-        "Say something to the Echo Master: \n",
-        "<User input>: Hello\n",
-        "<Output>\n",
-        "Hello...\n",
-        "```\n",
-        "\n",
-        "Try using everything you've learned until now. `print`, `input`, assigning a variable with `=`, and using that variable in another statement."
+        "Find two ways to compute the square root of a number. One using the `math` module, and one using simple operators.\n",
+        "\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rg1lRjJ1v6Yj",
+        "id": "QTkUyFUJkbUf",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "import math\n",
+        "\n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
