--- a/001-First-Steps/First Steps - Chap 02 - Exercises.ipynb
+++ b/001-First-Steps/First Steps - Chap 02 - Exercises.ipynb
@@ -153,7 +153,8 @@
         "## 4. Square root\n",
         "\n",
         "Find two ways to compute the square root of a number. One using the `math` module, and one using simple operators.\n",
-        "\n"
+        "\n",
+        "Which do you think is better? Why?"
       ]
     },
     {
