--- a/001-First-Steps/First Steps - Workshop.ipynb
+++ b/001-First-Steps/First Steps - Workshop.ipynb
@@ -3,9 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Untitled",
+      "name": "First Steps - Workshop",
       "provenance": [],
       "private_outputs": true,
+      "collapsed_sections": [],
       "toc_visible": true,
       "include_colab_link": true
     },
@@ -22,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/cstar-industries/python-3-beginner/blob/master/001-First-Steps/First%20Steps%20-%20Exercises.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/cstar-industries/python-3-beginner/blob/master/001-First-Steps/First%20Steps%20-%20Workshop.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -32,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Module 1: Exercises"
+        "# Session 1: Workshop"
       ]
     },
     {
@@ -42,7 +43,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## 1."
+        "## 1. Basic input/output in Python"
       ]
     },
     {
@@ -83,7 +84,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## 2."
+        "## 2. Manipulating different types of variables"
       ]
     },
     {
@@ -250,6 +251,188 @@
         "- [ ] `greeting + age`\n",
         "- [ ] This is an error"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CnaL3_OytYzV",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 3. Fibonacci numbers\n",
+        "\n",
+        "The Fibonacci numbers are a sequence such that each number is the sum of the two preceding ones, starting from 0 and 1.\n",
+        "\n",
+        "That is:\n",
+        "\n",
+        "$F_{n} = F_{n-1} + F_{n-2}$\n",
+        "\n",
+        "with\n",
+        "\n",
+        "$F_0 = 0, F_1 = 1$\n",
+        "\n",
+        "The sequence begins with:\n",
+        "\n",
+        "0, 1, 1, 2, 3, 5, 8...\n",
+        "\n",
+        "----\n",
+        "\n",
+        "Write a block of code that prints out the next Fibonacci number each time it is run. The first block is only there to initialize the variables."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VkZOTb0RWm0S",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Hi! This is a comment!\n",
+        "# Anything on a line that follows a pound sign (#) will be ignored by the\n",
+        "# interpreter when the code is executed. This is very useful to explain your\n",
+        "# code, or to leave notes like this one.\n",
+        "#\n",
+        "# This block should only be executed once to initialize the variables for the\n",
+        "# Fibonacci exercise. You can also use it if you want to reset the state of\n",
+        "# the Fibonacci exercise.\n",
+        "\n",
+        "a = 0\n",
+        "b = 1"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1H3DTYkDXSp5",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Run this block to output the next Fibonacci number, starting with F3 = 1.\n",
+        "\n",
+        "# HINT: After running the block, a and b should not be equal to their original\n",
+        "# value \n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-dgkvGfnbVHk",
+        "colab_type": "text"
+      },
+      "source": [
+        "## 4. Columns and rows\n",
+        "\n",
+        "Consider a grid of width $M$ and height $N$. Number each cell of the grid by counting from the upper left corner, and progressing right until the end of the line, then keep counting from the first cell of the next line.\n",
+        "\n",
+        "```\n",
+        "M = 4, N = 3\n",
+        "\n",
+        "+----+----+----+----+\n",
+        "|  0 |  1 |  2 |  3 |\n",
+        "+----+----+----+----+\n",
+        "|  4 |  5 |  6 |  7 |\n",
+        "+----+----+----+----+\n",
+        "|  8 |  9 | 10 | 11 |\n",
+        "+----+----+----+----+\n",
+        "``` \n",
+        "\n",
+        "We are interested in finding the relation between a cell's coordinates and its index.\n",
+        "\n",
+        "| Cell index | Cell coordinates |\n",
+        "|------------|------------------|\n",
+        "| 0          | (0, 0)           |\n",
+        "| 1          | (0, 1)           |\n",
+        "| 3          | (0, 3)           |\n",
+        "| 6          | (1, 2)           |\n",
+        "| 11         | (2, 3)           |"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-j5FwaSfdw9-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Initialize width and height of the grid\n",
+        "\n",
+        "M = 4\n",
+        "N = 3"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IsiUt0sjdr2x",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 4.1 Coordinates to index\n",
+        "\n",
+        "Write a program that takes two integers from the command line as row and column coordinates, and outputs the index of the corresponding cell.\n",
+        "\n",
+        "Example:\n",
+        "```\n",
+        "Enter the row: 1\n",
+        "Enter the column: 2\n",
+        "\n",
+        "The cell at (1, 2) is index 6\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IOJ7zVWRecm0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Use M and N from the previous block for width and height of the grid"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "v4dFK4Y_eZG8"
+      },
+      "source": [
+        "### 4.2 Index to coordinates\n",
+        "\n",
+        "Write a program that takes an integer from the command line as the cell index, and outputs the (row, column) coordinates of the corresponding cell.\n",
+        "\n",
+        "Example:\n",
+        "```\n",
+        "Enter the cell index: 6\n",
+        "\n",
+        "The cell with index 6 is located at (1, 2).\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "id": "9HO15RZ9emLD",
+        "colab": {}
+      },
+      "source": [
+        "# Use M and N from the previous block for width and height of the grid"
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
