--- a/001-First-Steps/First Steps - Chap 02 - Exercises.ipynb
+++ b/001-First-Steps/First Steps - Chap 02 - Exercises.ipynb
@@ -154,7 +154,9 @@
         "\n",
         "Find two ways to compute the square root of a number. One using the `math` module, and one using simple operators.\n",
         "\n",
-        "Which do you think is better? Why?"
+        "Which do you think is better? Why?\n",
+        "\n",
+        "What happens if you calculate the square root of a negative number? Is it the same in both cases?"
       ]
     },
     {
